--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     <div class="icon2 text-center">
                                         <img src="images/star.png" alt="images">
                                     </div>
-                                    <div class="icon-text mt-2">
+                                    <div class="icon-text">
                                         <h3 class="text-center  m-0"> High Quality Product</h3>
                                     </div>
                                 </div>
@@ -263,7 +263,7 @@
                                     <div class="icon2 text-center">
                                         <img src="images/Vector.png" alt="images">
                                     </div>
-                                    <div class="icon-text mt-2">
+                                    <div class="icon-text">
                                         <h3 class="text-center m-0" > customer satisfaction</h3>
                                     </div>
                                 </div>
@@ -272,7 +272,7 @@
 
                                 <div class="benefit-pro ">
                                     <div class="icon2 text-center">
-                                        <img src="images/MicrosoftTeams-image (5).png" alt="images">
+                                        <img src="images/MicrosoftTeams-image (7).png" alt="images">
                                     </div>
                                     <div class="icon-text">
                                         <h3 class="text-center  m-0" > customer satisfaction</h3>
@@ -315,18 +315,18 @@
                                         business in a transparent, trustworthy
                                         and safe manner through team work,
                                         integrity and innovation.</p>
-                                    <div class="sparkle-button">
                                         <div class="sparkle-button">
-
-                                            <button class="btn2">
-                                                <span class="spark"></span>
-                                                <span class="backdrop"></span>
-                                                <div class="d-flex  align-items-center">
-                                                    <div> <span class="text ms-5 ps-2">Next Image</span></div>
-                                                </div>
-                                            </button>
+                                            <div class="sparkle-button">
+                                                <button class="btn2">
+                                                    <div class="d-flex  align-items-center">
+                                                        <div class="about-btn-3 d-flex align-items-center justify-content-center">
+                                                            <i class="fa-solid fa-arrow-up-long"></i>
+                                                        </div>
+                                                        <div> <span class="text">Next Image</span></div>
+                                                    </div>
+                                                </button>
+                                            </div>
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -351,18 +351,18 @@
                                         business in a transparent, trustworthy
                                         and safe manner through team work,
                                         integrity and innovation.</p>
-                                    <div class="sparkle-button">
                                         <div class="sparkle-button">
-
-                                            <button class="btn2">
-                                                <span class="spark"></span>
-                                                <span class="backdrop"></span>
-                                                <div class="d-flex  align-items-center">
-                                                    <div> <span class="text ms-5 ps-2">Next Image</span></div>
-                                                </div>
-                                            </button>
+                                            <div class="sparkle-button">
+                                                <button class="btn2">
+                                                    <div class="d-flex  align-items-center">
+                                                        <div class=" about-btn-3 d-flex align-items-center justify-content-center">
+                                                            <i class="fa-solid fa-arrow-up-long"></i>
+                                                        </div>
+                                                        <div> <span class="text">Next Image</span></div>
+                                                    </div>
+                                                </button>
+                                            </div>
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -387,24 +387,24 @@
                                         business in a transparent, trustworthy
                                         and safe manner through team work,
                                         integrity and innovation.</p>
-                                    <div class="sparkle-button">
                                         <div class="sparkle-button">
-
-                                            <button class="btn2">
-                                                <span class="spark"></span>
-                                                <span class="backdrop"></span>
-                                                <div class="d-flex  align-items-center">
-                                                    <div> <span class="text ms-4 ps-2">Next Image</span></div>
-                                                </div>
-                                            </button>
+                                            <div class="sparkle-button">
+                                                <button class="btn2">
+                                                    <div class="d-flex  align-items-center">
+                                                        <div class=" about-btn-3 d-flex align-items-center justify-content-center">
+                                                            <i class="fa-solid fa-arrow-up-long"></i>
+                                                        </div>
+                                                        <div> <span class="text">Next Image</span></div>
+                                                    </div>
+                                                </button>
+                                            </div>
                                         </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-button-next swiper-button-next1">
-                        <div class="about-btn  d-flex align-items-center justify-content-center">
+                        <div class="about-btn-3 d-flex align-items-center justify-content-center">
                             <i class="fa-solid fa-arrow-up-long"></i>
 
                         </div>
@@ -436,7 +436,7 @@
                         </div>
 
                         <div class="swiper-wrapper  col-12">
-                            <div class="swiper-slide col-3 ">
+                            <div class="swiper-slide box-set col-3 ">
                                 <div class="card p-2">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="images/Revitalize1.png" class="card-img-top " alt="images"
@@ -450,7 +450,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide col-3 ">
+                            <div class="swiper-slide box-set col-3 ">
                                 <div class="card p-2">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="images/Revitalize2.png" class="card-img-top " alt="images"
@@ -464,7 +464,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide col-3 ">
+                            <div class="swiper-slide box-set col-3 ">
                                 <div class="card p-2">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="images/Revitalize3.png" class="card-img-top " alt="images"
@@ -478,7 +478,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide col-3 ">
+                            <div class="swiper-slide box-set col-3 ">
                                 <div class="card p-2">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="images/Revitalize4.png" class="card-img-top " alt="images"
@@ -492,7 +492,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide col-3 ">
+                            <div class="swiper-slide box-set col-3 ">
                                 <div class="card p-2">
                                     <div class=" p-2 card2 col-12 justify-content-center d-flex">
                                         <img src="images/Revitalize5.png" class="card-img-top " alt="images"
@@ -506,7 +506,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide col-3 ">
+                            <div class="swiper-slide box-set col-3 ">
                                 <div class="card p-2">
                                     <div class=" card2 p-2 col-12 justify-content-center d-flex">
                                         <img src="images/Revitalize6.png" class="card-img-top " alt="images"
@@ -520,7 +520,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide col-3 ">
+                            <div class="swiper-slide box-set col-3 ">
                                 <div class="card p-2">
                                     <div class=" card2 p-2 col-12 justify-content-center d-flex">
                                         <img src="images/Revitalize7.png" class="card-img-top " alt="images"
@@ -539,22 +539,15 @@
                 </div>
                 <div class="col-12 d-flex justify-content-center mt-5">
                     <div class="sparkle-button">
-
                         <div class="sparkle-button">
-
                             <button class="btn2">
-                                <span class="spark"></span>
-                                <span class="backdrop"></span>
                                 <div class="d-flex  align-items-center">
-                                    <div class="about-btn ms-1 d-flex align-items-center justify-content-center">
+                                    <div class="about-btn d-flex align-items-center justify-content-center">
                                         <i class="fa-solid fa-arrow-up-long"></i>
-
                                     </div>
-                                    <div> <span class="text ms-4">View all</span></div>
+                                    <div> <span class="text">View all</span></div>
                                 </div>
                             </button>
-
-
                         </div>
                     </div>
                 </div>
@@ -659,8 +652,8 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="col-12 d-flex justify-content-between flex-wrap">
-                            <div class="cout d-flex justify-content-center bg-white m-3" style="height: 180px;">
+                        <div class="col-12 Global-Excellence-sab d-flex justify-content-between flex-wrap">
+                            <div class="cout d-flex justify-content-center bg-white " style="height: 180px;">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -669,7 +662,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout d-flex justify-content-center bg-white m-3" style="height: 180px;">
+                            <div class="cout d-flex justify-content-center bg-white " style="height: 180px;">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -678,7 +671,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout d-flex justify-content-center bg-white m-3" style="height: 180px;">
+                            <div class="cout d-flex justify-content-center bg-white " style="height: 180px;">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -687,7 +680,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout d-flex justify-content-center bg-white m-3" style="height: 180px;">
+                            <div class="cout d-flex justify-content-center bg-white " style="height: 180px;">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -814,11 +807,11 @@
                                 </a></h2>
                         </div>
                         <div class="Quick-Link-sab ">
-                            <p><a href="#"> <i class="fa-solid fa-phone pe-2"></i> +91 99980 35620</a></p>
-                            <p><a href="#"><i class="fa-regular fa-envelope pe-2"></i>infoecomaxlubricant@gmail.com</a>
+                            <p><a href="https://wa.me/919998035620?text="><img src="images/cal.png" alt="images" > +91 99980 35620</a></p>
+                            <p><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"> <img src="images/email.png" alt="images" > infoecomaxlubricant@gmail.com</a>
                             </p>
-                            <p><a href="#"><i class="fa-solid fa-location-dot pe-2 "> </i>Block No. E-37, Hindva Dreams,
-                                    <br> &nbsp; &nbsp; Dhoran Pardi Gaypagla Road, <br> &nbsp; &nbsp; Kamrej, Surat,
+                            <p><a href="#"><img src="images/ad.png" alt="images" > </i>Block No. E-37, Hindva Dreams,
+                                    <br> &nbsp; &nbsp; &nbsp; &nbsp;  Dhoran Pardi Gaypagla Road, <br> &nbsp; &nbsp;  &nbsp; &nbsp; Kamrej, Surat,
                                     Gujarat-394155</a></p>
                         </div>
                     </div>
