Added changes for the map and facvicon icon

--- a/career.html
+++ b/career.html
@@ -15,6 +15,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/images/home/Favicon icon - Ecomax (1).png">
+
 </head>
 
 <body>
@@ -32,12 +34,12 @@
         <div class="row">
             <div class=" p-0 d-flex align-items-center justify-content-between">
                 <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                    <img src="assets/images/home/logo.png" alt="images" class="img-fluid">
+                  <a href="index.html">   <img  src="assets/images/home/logo.png" alt="images" class="img-fluid"></a>
                 </div>
                 <div class="nav   d-none d-lg-block d-flex justify-content-end">
                     <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
                         <li>
-                            <a href="index.html" class="text-success">HOME</a>
+                            <a href="index.html" >HOME</a>
                         </li>
                         <li>
                             <a href="#">PRODUCTS</a>
@@ -46,7 +48,7 @@
                             <a href="about.html">ABOUT US </a>
                         </li>
                         <li>
-                            <a href="career.html">CAREER</a>
+                            <a href="career.html" class="text-success">CAREER</a>
                         </li>
                         <li>
                             <a href="contactus.html">CONTACT US</a>
@@ -151,16 +153,20 @@
                   class="form-control w-100 field message_field"></textarea>
               </div>
             </div>
-            <div class="row form_button_container">
-              <div class="col ">
-                <button type="submit" class="btn rounded-pill d-flex align-items-center form_submit">
-                  <i
-                    class="fa-solid fa-arrow-up text-center d-flex align-items-center justify-content-center rounded-pill submit_arrow"></i>
-                  Submit
-                </button>
+            <div class="sparkle-button">
+              <div class="sparkle-button">
+                  <button class="btn2">
+                      <div class="d-flex align-items-center">
+                          <div class="about-btn d-flex align-items-center justify-content-center">
+                              <i class="fa-solid fa-arrow-up-long"></i>
+                          </div>
+                          <div> <span class="text"> Submit</span></div>
+                      </div>
+                  </button>
               </div>
-            </div>
+          </div>
           </form>
+         
         </div>
         <div
           class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-4  d-flex justify-content-center justify-content-sm-start ">
@@ -255,23 +261,23 @@
                 <div class="col-12 col-sm-3 col-md-3 col-xl-3   p-0 mb-3 float-left  ">
                   <h5 class="mb-4 footer_heading">Company</h5>
                   <ul class="list-group">
-                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
+                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="about.html"
                         class="link-light text-decoration-none">About Us</a></li>
-                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
+                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="career.html"
                         class="link-light text-decoration-none">Career</a></li>
-                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
+                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="contactus.html"
                         class="link-light text-decoration-none">Contact Us</a></li>
                   </ul>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-xl-5   mb-3 p-0 float-left  ">
                   <h5 class="mb-4 footer_heading">Connect with us</h5>
                   <ul class="list-group">
-                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
-                        class="link-light text-decoration-none">+91 99980 35620</a></li>
-                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
-                        class="link-light text-decoration-none">infoecomaxlubricant@gmail.com</a></li>
+                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://wa.me/919998035620?text=Hi"
+                        class="link-light text-decoration-none"> <img class="me-3" src="assets/images/home/cal.png" alt="images">+91 99980 35620</a></li>
+                    <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
+                        class="link-light text-decoration-none"><img class="me-3" src="assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                      <p class="text-light">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
+                      <p class="text-light"><img class="me-3" src="assets/images/home/ad.png" alt="images">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
                         Gujarat-394155</p>
                     </li>
                   </ul>
