--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
 
+  <link rel="icon" href="assets/images/home/Favicon icon - Ecomax (1).png">
+
 
 </head>
 
@@ -49,8 +51,8 @@
             <div class="row">
                 <div class="p-0 d-flex align-items-center justify-content-between">
                     <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                        <img src="assets/images/home/logo.png" alt="images" class="img-fluid">
-                    </div>
+                        <a href="index.html">   <img  src="assets/images/home/logo.png" alt="images" class="img-fluid"></a>
+                      </div>
                     <div class="nav   d-none d-lg-block d-flex justify-content-end">
                         <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
                             <li>
@@ -777,12 +779,12 @@
                   <div class="col-12 col-sm-6 col-md-6 col-xl-5   mb-3 p-0 float-left  ">
                     <h5 class="mb-4 footer_heading">Connect with us</h5>
                     <ul class="list-group">
-                      <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
-                          class="link-light text-decoration-none">+91 99980 35620</a></li>
-                      <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
-                          class="link-light text-decoration-none">infoecomaxlubricant@gmail.com</a></li>
+                      <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://wa.me/9199980 35620?text="
+                          class="link-light text-decoration-none"> <img class="me-3" src="assets/images/home/cal.png" alt="images"> +91 99980 35620</a></li>
+                      <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
+                          class="link-light text-decoration-none"><img class="me-3" src="assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
                       <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                        <p class="text-light">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
+                        <p class="text-light"><img class="me-3" src="assets/images/home/ad.png" alt="images">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
                           Gujarat-394155</p>
                       </li>
                     </ul>
