--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/images/home/Favicon icon - Ecomax (1).png">
+
     </head>
   <body>
   
@@ -27,22 +29,22 @@
       <div class="container1">
           <div class="row">
               <div class=" p-0 d-flex align-items-center justify-content-between">
-                  <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                      <img src="assets/images/home/logo.png" alt="images" class="img-fluid">
+                <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
+                    <a href="index.html">   <img  src="assets/images/home/logo.png" alt="images" class="img-fluid"></a>
                   </div>
                   <div class="nav   d-none d-lg-block d-flex justify-content-end">
                       <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
                           <li>
-                              <a href="index.html" class="text-success">HOME</a>
+                              <a href="index.html" >HOME</a>
                           </li>
                           <li>
                               <a href="#">PRODUCTS</a>
                           </li>
                           <li>
-                              <a href="about.html">ABOUT US </a>
+                              <a href="about.html" class="text-success">ABOUT US </a>
                           </li>
                           <li>
-                              <a href="#">CAREER</a>
+                              <a href="career.html">CAREER</a>
                           </li>
                           <li>
                               <a href="contactus.html">CONTACT US</a>
@@ -69,19 +71,19 @@
                               <div class="nav">
                                   <ul class=" header-nav ">
                                       <li>
-                                          <a href="#" class="text-success">HOME</a>
+                                          <a href="index.html" class="text-success">HOME</a>
                                       </li>
                                       <li>
                                           <a href="#">PRODUCTS</a>
                                       </li>
                                       <li>
-                                          <a href="#">ABOUT US </a>
+                                          <a href="about.html">ABOUT US </a>
                                       </li>
                                       <li>
-                                          <a href="#">CAREER</a>
+                                          <a href="career.html">CAREER</a>
                                       </li>
                                       <li>
-                                          <a href="#">CONTACT US</a>
+                                          <a href="contactus.html">CONTACT US</a>
                                       </li>
                                   </ul>
                               </div>
@@ -93,34 +95,34 @@
               </div>
           </div>
       </div>
+
   </section>
   <!-- End: header -->
     <!-- about section image with text section start -->
     <div class="about-section">
         <div class="row">
-            <div class="col-12 col-xl-6  ">
-                <div class="About-text d-flex">
-                    <div class="bordericon d-flex justify-content-center align-items-center ">
-                        <img src="assets/images/home/Rectangle 58.png" alt="">
+            <div class="col-12 col-xl-6  about-section-text">
+                <div class=" d-flex about-sab">
+                    <div class="About-text d-flex">
+                        <div class="bordericon d-flex justify-content-center align-items-center ">
+                            <img src="assets/images/home/Rectangle 58.png" alt="">
+                        </div>
+                        <p class="about-title">About Us</p>
                     </div>
-                    <p class="about-title">About Us</p>
-                </div>
-                <div class="about-description">
-                    <p class="mb-0 about-description-heading sub-heading">Welcome to Ecomax – Where Every Drop Counts!
-                    </p>
-                    <p class="mb-0 about-description-detail">
-                        At Ecomax, we're not just about lubricant oils; we're about empowering industries, driving
-                        sustainability and building lasting relationships. With over 10 years of experience under our
-                        belt, we've honed our craft, perfected our products and cultivated a company culture centered
-                        around innovation and integrity.
-                    </p>
-                    <span class="horizontal-line d-block"></span>
-                    <p class="mb-0 about-description-detail">
-                        Our journey began with a simple belief: that quality should never be compromised, and
-                        sustainability should always be a priority. What started as a passion project has blossomed into
-                        a global enterprise, touching lives and lubricating industries across continents.
-                    </p>
-
+                    <div class="About-title">
+                        <h1>Welcome to Ecomax – Where Every Drop Counts!</h1>
+                    </div>
+                    <div class="About-des">
+                        <p>At Ecomax, we're not just about lubricant oils; we're about empowering industries,
+                            driving sustainability and building lasting relationships. With over 10 years of
+                            experience under our belt, we've honed our craft, perfected our products and
+                            cultivated a company culture centered around innovation and integrity.</p>
+                        <p>Our journey began with a simple belief: that quality should never be compromised, and
+                            sustainability should always be a priority. What started as a passion project has
+                            blossomed into a global enterprise, touching lives and lubricating industries
+                            across continents.
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="col-12 col-xl-6 p-0  ">
@@ -406,12 +408,12 @@
               <div class="col-12 col-sm-6 col-md-6 col-xl-5   mb-3 p-0 float-left  ">
                 <h5 class="mb-4 footer_heading">Connect with us</h5>
                 <ul class="list-group">
-                  <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
-                      class="link-light text-decoration-none">+91 99980 35620</a></li>
-                  <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="#"
-                      class="link-light text-decoration-none">infoecomaxlubricant@gmail.com</a></li>
+                  <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://wa.me/9199980 35620?text="
+                      class="link-light text-decoration-none"> <img class="me-3" src="assets/images/home/cal.png" alt="images"> +91 99980 35620</a></li>
+                  <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
+                      class="link-light text-decoration-none"><img class="me-3" src="assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                    <p class="text-light">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
+                    <p class="text-light"><img class="me-3" src="assets/images/home/ad.png" alt="images">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
                       Gujarat-394155</p>
                   </li>
                 </ul>
