--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 </head>
 
 <body>
+    <a href="#" class="back">
+        <i class="fa-solid fa-arrow-up-long text-white"></i>
+      </a>
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
@@ -779,7 +782,7 @@
                   <div class="col-12 col-sm-6 col-md-6 col-xl-5   mb-3 p-0 float-left  ">
                     <h5 class="mb-4 footer_heading">Connect with us</h5>
                     <ul class="list-group">
-                      <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://wa.me/9199980 35620?text="
+                      <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="tel:+919998035620"
                           class="link-light text-decoration-none"> <img class="me-3" src="assets/images/home/cal.png" alt="images"> +91 99980 35620</a></li>
                       <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
                           class="link-light text-decoration-none"><img class="me-3" src="assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
