tinker icon set

--- a/career.html
+++ b/career.html
@@ -30,18 +30,19 @@
         </div>
     </div>
 </div>
+
 <!-- Start: header -->
 <section class="header header-xs header-sm header-md header-lg">
     <div class="container1">
         <div class="row">
             <div class=" p-0 d-flex align-items-center justify-content-between">
                 <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                  <a href="index.html">   <img  src="assets/images/home/logo.png" alt="images" class="img-fluid"></a>
+                  <a href="/">   <img  src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images" class="img-fluid"></a>
                 </div>
                 <div class="nav   d-none d-lg-block d-flex justify-content-end">
                     <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
                         <li>
-                            <a href="index.html" >HOME</a>
+                            <a href="/" >HOME</a>
                         </li>
                         <li>
                             <a href="#">PRODUCTS</a>
@@ -67,7 +68,7 @@
                         aria-labelledby="offcanvasTopLabel">
                         <div class="offcanvas-header">
                             <div class="logo logo-xs logo-md d-flex me-3">
-                                <img src="assets/images/home/logo.png" class="me-3" alt="logo">
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" class="me-3" alt="logo">
                             </div>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
@@ -77,7 +78,7 @@
                             <div class="nav">
                                 <ul class=" header-nav ">
                                     <li>
-                                        <a href="index.html" class="text-success">HOME</a>
+                                        <a href="/" class="text-success">HOME</a>
                                     </li>
                                     <li>
                                         <a href="#">PRODUCTS</a>
@@ -173,7 +174,7 @@
         <div
           class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-4  d-flex justify-content-center justify-content-sm-start ">
           <div class="career-img-container">
-            <img src="assets/images/career/Mask group.png" alt="oil-img" class="img-fluid bg-dark h-100">
+            <img src="https://ik.imagekit.io/ecomax/assets/images/career/Mask group.png" alt="oil-img" class="img-fluid bg-dark h-100">
           </div>
         </div>
       </div>
@@ -232,13 +233,13 @@
         <div class="page_width ">
           <div class="row">
             <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
-              <img src="assets/images/nav_logo.png" alt="logo image" width="340" class="footer-logo-image img-fluid ">
+              <img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340" class="footer-logo-image img-fluid ">
               <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best Companion
               </p>
               <div class="d-flex  footer-icon-container">
-                <img src="assets/images/icons/Insta.png" alt="insta Logo">
-                <img src="assets/images/icons/Linkedin.png" alt="Linkedin Logo">
-                <img src="assets/images/icons/Behance.png" alt="Behance Logo">
+                <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Insta.png" alt="insta Logo">
+                <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Linkedin.png" alt="Linkedin Logo">
+                <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Behance.png" alt="Behance Logo">
               </div>
             </div>
             <div class="col-md-12  col-lg-8">
@@ -275,11 +276,11 @@
                   <h5 class="mb-4 footer_heading">Connect with us</h5>
                   <ul class="list-group">
                     <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="tel:+919998035620"
-                        class="link-light text-decoration-none"> <img class="me-3" src="assets/images/home/cal.png" alt="images">+91 99980 35620</a></li>
+                        class="link-light text-decoration-none"> <img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/cal.png" alt="images">+91 99980 35620</a></li>
                     <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
-                        class="link-light text-decoration-none"><img class="me-3" src="assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
+                        class="link-light text-decoration-none"><img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                      <p class="text-light"><img class="me-3" src="assets/images/home/ad.png" alt="images">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
+                      <p class="text-light"><img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png" alt="images">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
                         Gujarat-394155</p>
                     </li>
                   </ul>
@@ -303,7 +304,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <script src="assets/JS/script.js"></script>
+    <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
   <!-- Script end -->
 </body>
 
