--- a/about.html
+++ b/about.html
@@ -32,12 +32,12 @@
           <div class="row">
               <div class=" p-0 d-flex align-items-center justify-content-between">
                 <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                    <a href="index.html">   <img  src="assets/images/home/logo.png" alt="images" class="img-fluid"></a>
+                    <a href="/">   <img  src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images" class="img-fluid"></a>
                   </div>
                   <div class="nav   d-none d-lg-block d-flex justify-content-end">
                       <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
                           <li>
-                              <a href="index.html" >HOME</a>
+                              <a href="/" >HOME</a>
                           </li>
                           <li>
                               <a href="#">PRODUCTS</a>
@@ -63,7 +63,7 @@
                           aria-labelledby="offcanvasTopLabel">
                           <div class="offcanvas-header">
                               <div class="logo logo-xs logo-md d-flex me-3">
-                                  <img src="assets/images/home/logo.png" class="me-3" alt="logo">
+                                  <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" class="me-3" alt="logo">
                               </div>
                               <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                   aria-label="Close"></button>
@@ -73,7 +73,7 @@
                               <div class="nav">
                                   <ul class=" header-nav ">
                                       <li>
-                                          <a href="index.html" class="text-success">HOME</a>
+                                          <a href="/" class="text-success">HOME</a>
                                       </li>
                                       <li>
                                           <a href="#">PRODUCTS</a>
@@ -107,7 +107,7 @@
                 <div class=" d-flex about-sab">
                     <div class="About-text d-flex">
                         <div class="bordericon d-flex justify-content-center align-items-center ">
-                            <img src="assets/images/home/Rectangle 58.png" alt="">
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 58.png" alt="">
                         </div>
                         <p class="about-title">About Us</p>
                     </div>
@@ -129,7 +129,7 @@
             </div>
             <div class="col-12 col-xl-6 p-0  ">
                 <div class="about-image-container h-100 ">
-                    <img class="img-fluid" src="assets/images/about_page/car.png" alt="about image">
+                    <img class="img-fluid" src="https://ik.imagekit.io/ecomax/assets/images/about_page/car.png" alt="about image">
                 </div>
             </div>
         </div>
@@ -171,7 +171,7 @@
                                   <div class="benefit-main">
                                       <div class="benefit-pro">
                                           <div class="icon2 text-center">
-                                              <img src="assets/images/home/star.png" alt="images">
+                                              <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.png" alt="images">
                                           </div>
                                           <div class="icon-text">
                                               <h3 class="text-center  m-0"> High Quality Product</h3>
@@ -184,7 +184,7 @@
 
                                       <div class="benefit-pro">
                                           <div class="icon2 text-center">
-                                              <img src="assets/images/home/Vector.png" alt="images">
+                                              <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.png" alt="images">
                                           </div>
                                           <div class="icon-text">
                                               <h3 class="text-center m-0"> customer satisfaction</h3>
@@ -197,7 +197,7 @@
 
                                       <div class="benefit-pro ">
                                           <div class="icon2 text-center">
-                                              <img src="assets/images/home/MicrosoftTeams-image (7).png" alt="images">
+                                              <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image (7).png" alt="images">
                                           </div>
                                           <div class="icon-text">
                                               <h3 class="text-center  m-0"> customer satisfaction</h3>
@@ -215,7 +215,7 @@
                           <div class="benefit-main">
                               <div class="benefit-pro">
                                   <div class="icon2 text-center">
-                                      <img src="assets/images/home/star.png" alt="images">
+                                      <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.png" alt="images">
                                   </div>
                                   <div class="icon-text">
                                       <h3 class="text-center  m-0"> High Quality Product</h3>
@@ -226,7 +226,7 @@
 
                               <div class="benefit-pro">
                                   <div class="icon2 text-center">
-                                      <img src="assets/images/home/Vector.png" alt="images">
+                                      <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.png" alt="images">
                                   </div>
                                   <div class="icon-text">
                                       <h3 class="text-center m-0"> customer satisfaction</h3>
@@ -237,7 +237,7 @@
 
                               <div class="benefit-pro ">
                                   <div class="icon2 text-center">
-                                      <img src="assets/images/home/MicrosoftTeams-image (7).png" alt="images">
+                                      <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image (7).png" alt="images">
                                   </div>
                                   <div class="icon-text">
                                       <h3 class="text-center  m-0"> customer satisfaction</h3>
@@ -326,7 +326,7 @@
                   <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
                       <div class="d-flex gap-sm-4 gap-3">
                           <div class="icon_container">
-                              <img src="assets/images/icons/Mail.png" alt="mail">
+                              <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Mail.png" alt="mail">
                           </div>
                           <div class="contact_detail_card">
                               <p class="contact_card_heading fw-medium "> Email</p>
@@ -337,7 +337,7 @@
                   <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
                       <div class="d-flex gap-sm-4 gap-3">
                           <div class="icon_container">
-                              <img src="assets/images/icons/Phone.png" alt="phone">
+                              <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Phone.png" alt="phone">
                           </div>
                           <div class="contact_detail_card">
                               <p class="contact_card_heading fw-medium "> Call</p>
@@ -348,7 +348,7 @@
                   <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
                       <div class="d-flex align-items-center gap-sm-4 gap-3">
                           <div class="icon_container">
-                              <img src="assets/images/icons/Location.png" alt="location">
+                              <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Location.png" alt="location">
                           </div>
                           <div class="contact_detail_card">
                               <p class="contact_card_heading fw-medium "> Office</p>
@@ -368,13 +368,13 @@
       <div class="page_width ">
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
-            <img src="assets/images/nav_logo.png" alt="logo image" width="340" class="footer-logo-image img-fluid ">
+            <img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image" width="340" class="footer-logo-image img-fluid ">
             <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best Companion
             </p>
             <div class="d-flex  footer-icon-container">
-              <img src="assets/images/icons/Insta.png" alt="insta Logo">
-              <img src="assets/images/icons/Linkedin.png" alt="Linkedin Logo">
-              <img src="assets/images/icons/Behance.png" alt="Behance Logo">
+              <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Insta.png" alt="insta Logo">
+              <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Linkedin.png" alt="Linkedin Logo">
+              <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Behance.png" alt="Behance Logo">
             </div>
           </div>
           <div class="col-md-12  col-lg-8">
@@ -411,11 +411,11 @@
                 <h5 class="mb-4 footer_heading">Connect with us</h5>
                 <ul class="list-group">
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="tel:+919998035620"
-                      class="link-light text-decoration-none"> <img class="me-3" src="assets/images/home/cal.png" alt="images"> +91 99980 35620</a></li>
+                      class="link-light text-decoration-none"> <img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/cal.png" alt="images"> +91 99980 35620</a></li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
-                      class="link-light text-decoration-none"><img class="me-3" src="assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
+                      class="link-light text-decoration-none"><img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/email.png" alt="images">infoecomaxlubricant@gmail.com</a></li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                    <p class="text-light"><img class="me-3" src="assets/images/home/ad.png" alt="images">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
+                    <p class="text-light"><img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png" alt="images">Block No. E-37, Hindva Dreams, Dhoran Pardi Gaypagla Road, Kamrej, Surat,
                       Gujarat-394155</p>
                   </li>
                 </ul>
@@ -437,6 +437,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="assets/JS/script.js"></script>
+    <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
     </body>
   </html>
