--- a/contactus.html
+++ b/contactus.html
@@ -481,7 +481,7 @@ pointSeries.bullets.push(function() {
     sprite: am5.Circle.new(root, {
       radius: 10,
       // svgPath: "m2,106h28l24,30h72l-44,-133h35l80,132h98c21,0 21,34 0,34l-98,0 -80,134h-35l43,-133h-71l-24,30h-28l15,-47",
-      fill: "#E52"
+      fill: "#B0CB1F"
     })
   });
 });
