--- a/contactus.html
+++ b/contactus.html
@@ -309,6 +309,7 @@
       width: 100%;
       height: 600px
     }
+      .map-section {padding-bottom: 100px;}
     </style>
     
     <!-- Resources -->
