--- a/contactus.html
+++ b/contactus.html
@@ -310,6 +310,7 @@
       height: 600px
     }
       .map-section {padding-bottom: 100px;}
+      .am5-layer-30 {display:none;}
     </style>
     
     <!-- Resources -->
@@ -410,11 +411,11 @@ var cities = {
   {
     "type": "Feature",
     "properties": {
-      "name": "US"
+      "name": "India"
     },
     "geometry": {
       "type": "Point",
-      "coordinates": [-0.454296, 2.470020]
+      "coordinates": [20.7371635,72.1179636]
     }
   },
   {
