Added fix for the responsive

--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@
   </section>
   <!-- End: header -->
 <!-- ---------------------- map Section Start ------------------------------ -->
-<section class="contact-title">
+<section class="section_padding contact-title">
     <div class="container1">
       <div class="row">
         <h2 class="title-contact">
@@ -312,6 +312,16 @@
       .map-section {padding-bottom: 100px;}
       .am5-layer-30 {display:none;}
       g[aria-labelledby="id-72-title"] {display:none;}
+      @media (max-width:768px)  {
+        h2.title-contact {
+          font-size: 26px;
+    line-height: normal;
+        }
+        #chartdiv {
+      width: 100%;
+      height: 250px;
+    }
+      }
     </style>
 
 <!-- Resources -->
