--- a/career.html
+++ b/career.html
@@ -33,75 +33,75 @@
 
 <!-- Start: header -->
 <section class="header header-xs header-sm header-md header-lg">
-    <div class="container1">
-        <div class="row">
-            <div class=" p-0 d-flex align-items-center justify-content-between">
-                <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
+  <div class="container1">
+      <div class="row">
+          <div class="p-0 d-flex align-items-center justify-content-between">
+              <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
                   <a href="/">   <img  src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" alt="images" class="img-fluid"></a>
                 </div>
-                <div class="nav   d-none d-lg-block d-flex justify-content-end">
-                    <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
-                        <li>
-                            <a href="/" >HOME</a>
-                        </li>
-                        <li>
-                            <a href="#">PRODUCTS</a>
-                        </li>
-                        <li>
-                            <a href="about.html">ABOUT US </a>
-                        </li>
-                        <li>
-                            <a href="career.html" class="text-success">CAREER</a>
-                        </li>
-                        <li>
-                            <a href="contactus.html">CONTACT US</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-1 d-flex justify-content-center d-lg-none ps-1 pe-1 pb-1">
-                    <div type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
-                        aria-controls="offcanvasTop">
-                        <i class="fa-solid fa-bars-staggered"></i>
-                    </div>
+              <div class="nav   d-none d-lg-block d-flex justify-content-end">
+                  <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
+                      <li>
+                          <a href="/" class="text-success">HOME</a>
+                      </li>
+                      <li>
+                          <a href="#">PRODUCTS</a>
+                      </li>
+                      <li>
+                          <a href="about.html">ABOUT US </a>
+                      </li>
+                      <li>
+                          <a href="career.html">CAREER</a>
+                      </li>
+                      <li>
+                          <a href="contactus.html">CONTACT US</a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="col-1 d-flex justify-content-center d-lg-none ps-1 pe-1 pb-1">
+                  <div type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
+                      aria-controls="offcanvasTop">
+                      <i class="fa-solid fa-bars-staggered"></i>
+                  </div>
 
-                    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop"
-                        aria-labelledby="offcanvasTopLabel">
-                        <div class="offcanvas-header">
-                            <div class="logo logo-xs logo-md d-flex me-3">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" class="me-3" alt="logo">
-                            </div>
-                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
+                  <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop"
+                      aria-labelledby="offcanvasTopLabel">
+                      <div class="offcanvas-header">
+                          <div class="logo logo-xs logo-md d-flex me-3">
+                              <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo.png" class="me-3" alt="logo">
+                          </div>
+                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                              aria-label="Close"></button>
+                      </div>
+                      <div class="offcanvas-body"style="padding-bottom: 400px;">
 
-                            <div class="nav">
-                                <ul class=" header-nav ">
-                                    <li>
-                                        <a href="/" class="text-success">HOME</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">PRODUCTS</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">ABOUT US </a>
-                                    </li>
-                                    <li>
-                                        <a href="career.html">CAREER</a>
-                                    </li>
-                                    <li>
-                                        <a href="contactus.html">CONTACT US</a>
-                                    </li>
-                                </ul>
-                            </div>
+                          <div class="nav">
+                              <ul class=" header-nav ">
+                                  <li>
+                                      <a href="/" >HOME</a>
+                                  </li>
+                                  <li>
+                                      <a href="#">PRODUCTS</a>
+                                  </li>
+                                  <li>
+                                      <a href="about.html">ABOUT US </a>
+                                  </li>
+                                  <li>
+                                      <a href="career.html" class="text-success">CAREER</a>
+                                  </li>
+                                  <li>
+                                      <a href="contactus.html">CONTACT US</a>
+                                  </li>
+                              </ul>
+                          </div>
 
-                        </div>
-                    </div>
+                      </div>
+                  </div>
 
-                </div>
-            </div>
-        </div>
-    </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </section>
   <!-- Navbar End -->
   <!-- Form Section Start -->
