--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                     aria-label="Close"></button>
                             </div>
-                            <div class="offcanvas-body">
+                            <div class="offcanvas-body" style="padding-bottom: 400px;">
 
                                 <div class="nav">
                                     <ul class=" header-nav ">
@@ -101,13 +101,13 @@
                                             <a href="#">PRODUCTS</a>
                                         </li>
                                         <li>
-                                            <a href="#">ABOUT US </a>
+                                            <a href="about.html">ABOUT US </a>
                                         </li>
                                         <li>
-                                            <a href="#">CAREER</a>
+                                            <a href="career.html">CAREER</a>
                                         </li>
                                         <li>
-                                            <a href="#">CONTACT US</a>
+                                            <a href="contactus.html">CONTACT US</a>
                                         </li>
                                     </ul>
                                 </div>
