--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
 </head>
 
-<body>
+<body class="hide-scroll">
     <a href="#" class="back">
-        <i class="fa-solid fa-arrow-up-long text-white"></i>
-      </a>
+        <i class="fa-solid fa-angle-up"></i>
+    </a>
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
@@ -908,7 +908,7 @@
         </div>
         </footer>
         <!-- Footer end -->
-
+    
     <script src="https://ik.imagekit.io/ecomax/assets/JS/jquery-min.js"></script>
     <script src="https://ik.imagekit.io/ecomax/assets/JS/owl.carousel.min.js"></script>
     <!-- swiper -->
