mep : - Brazil abd Australia -- add

--- a/contactus.html
+++ b/contactus.html
@@ -514,22 +514,12 @@ imageSeries.data = [ {
   "latitude": 20.593683,
   "longitude": 78.962883,
   "color":colorSet.next()
-}, {
-  "title": "Angola",
-  "latitude": -11.202692,
-  "longitude": 17.873886,
-  "color":colorSet.next()
-}, {
+},  {
   "title": "Iraq",
   "latitude": 33.223190,
   "longitude": 43.679291,
   "color":colorSet.next()
 },  {
-  "title": "Bahrain",
-  "latitude": 25.941298,
-  "longitude": 50.3073907,
-  "color":colorSet.next()
-}, {
   "title": "Tanzania",
   "latitude": -8.510342,
   "longitude": 38.892686,
@@ -554,12 +544,7 @@ imageSeries.data = [ {
   "latitude": -18.9968841,
   "longitude": 26.909101,
   "color":colorSet.next()
-}, {
-  "title": "New Zealand",
-  "latitude": -40.4338912,
-  "longitude": 166.3296912,
-  "color":colorSet.next()
-}, 
+},  
 {
   "title": "Russia",
   "latitude": 61.524010,
@@ -600,29 +585,28 @@ imageSeries.data = [ {
   "longitude":104.8144914,
   "color":colorSet.next()
 },
-
-
-
-
-
-
-                    {
+{
+  "title": "Brazil",
+  "latitude": -10.00000000,
+  "longitude":-55.00000000,
+  "color":colorSet.next()
+},
+{
+  "title": "Australia",
+  "latitude": -27.00000000,
+  "longitude":   133.00000000,  
+  "color":colorSet.next()
+},
+{
   "title": "Canada",
   "latitude": 61.0666922,
   "longitude":-107.991707,
   "color":colorSet.next()
 },
-
-                    {
+  {
   "title": "United States of America",
   "latitude": 38.673433,
   "longitude":-100.677040,
-  "color":colorSet.next()
-},                        
-                    {
-  "title": "Fiji Islands",
-  "latitude":-17.713371,
-  "longitude":178.065033,
   "color":colorSet.next()
 }];
 }
