MR. Mukesh Kalsaria section add about page

--- a/career.html
+++ b/career.html
@@ -85,7 +85,7 @@
                       <div class="offcanvas-body">
                           <ul class="nav d-block">
                               <li class="m-2">
-                                  <a href="/" class="text-success">HOME</a>
+                                  <a href="/" >HOME</a>
                               </li>
                               <li class="m-2">
                                   <a href="#">PRODUCTS</a>
@@ -95,7 +95,7 @@
                                   <a href="about.html">ABOUT US </a>
                               </li>
                               <li class="m-2">
-                                  <a href="career.html">CAREER</a>
+                                  <a href="career.html" class="text-success">CAREER</a>
                               </li>
                               <li class="m-2">
                                   <a href="contactus.html">CONTACT US</a>
@@ -163,7 +163,7 @@
               </div>
             </div>
             <div class="sparkle-button">
-              <div class="sparkle-button">
+              <div class="sparkle-button career-form-btn">
                   <button class="btn2">
                       <div class="d-flex align-items-center">
                           <div class="about-btn d-flex align-items-center justify-content-center">
