--- a/contactus.html
+++ b/contactus.html
@@ -52,7 +52,7 @@
                             <a href="career.html">CAREER</a>
                         </li>
                         <li>
-                            <a href="contactus.html"class="text-success">CONTACT US</a>
+                            <a href="contactus.html" class="text-success">CONTACT US</a>
                         </li>
                     </ul>
                 </div>
@@ -79,7 +79,7 @@
                         <div class="offcanvas-body">
                             <ul class="nav d-block">
                                 <li class="m-2">
-                                    <a href="/" class="text-success">HOME</a>
+                                    <a href="/">HOME</a>
                                 </li>
                                 <li class="m-2">
                                     <a href="#">PRODUCTS</a>
@@ -92,7 +92,7 @@
                                     <a href="career.html">CAREER</a>
                                 </li>
                                 <li class="m-2">
-                                    <a href="contactus.html">CONTACT US</a>
+                                    <a href="contactus.html" class="text-success">CONTACT US</a>
                                 </li>
                             </ul>
                         </div>
@@ -209,8 +209,8 @@
                 class="form-control w-100 field message_field"></textarea>
             </div>
           </div>
-          <div class="sparkle-button">
-            <div class="sparkle-button">
+          <div class="sparkle-button contactus-form-btn mb-3 ms-2">
+            <div class="sparkle-button ">
                 <button class="btn2">
                     <div class="d-flex align-items-center">
                         <div class="about-btn d-flex align-items-center justify-content-center">
