--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
     </section>
     <!-- End: header -->
     <!-- about section image with text section start -->
-    <div class="about-section1">
+    <div class="about-section">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-xl-6  about-section-text">
@@ -360,14 +360,14 @@
     <section class="Kalsaria contact-connect-section section_padding">
         <div class="container1">
             <div class="row">
-                <div class="col-12 d-flex flex-wrap align-items-center">
-                    <div class="col-4 d-flex justify-content-end">
+                <div class="col-12 d-flex flex-wrap align-items-center p-0">
+                    <div class="col-12 Mukesh col-md-6 col-lg-5 d-flex ">
                         <div class="Kalsaria-img">
                             <img src="https://ik.imagekit.io/ecomax/assets/images/about_page/mr.png"
                             alt="MR. Mukesh Kalsaria" class="img-fluid">
                         </div>
                     </div>
-                    <div class="col-7 Kalsaria-title-text">
+                    <div class="col-12 col-md-6 col-lg-7 Kalsaria-title-text">
                         <div class="Kalsaria-title">
                             <h2>MR. Mukesh Kalsaria</h2>
                             
