--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
     </section>
     <!-- End: header -->
     <!-- about section image with text section start -->
-    <div class="about-section">
+    <div class="about-section1">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-xl-6  about-section-text">
