--- a/about.html
+++ b/about.html
@@ -21,11 +21,7 @@
 </head>
 
 <body>
-    <div class="scrollbar back ">
-        <a href="#top">
-            <i class="fa-solid fa-arrow-up-long text-white"></i>
-        </a>
-    </div>
+
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
@@ -112,36 +108,52 @@
     </section>
     <!-- End: header -->
     <!-- about section image with text section start -->
-    <div class="about-section1">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-xl-6  about-section-text">
-                    <div class=" d-flex about-sab">
-                        <div class="About-title">
-                            <h1>Welcome to Ecomax – Where Every Drop Counts!</h1>
-                        </div>
-                        <div class="About-des">
-                            <p>At Ecomax, we're not just about lubricant oils; we're about empowering industries,
-                                driving sustainability and building lasting relationships. With over 10 years of
-                                experience under our belt, we've honed our craft, perfected our products and
-                                cultivated a company culture centered around innovation and integrity.</p>
-                            <p>Our journey began with a simple belief: that quality should never be compromised, and
-                                sustainability should always be a priority. What started as a passion project has
-                                blossomed into a global enterprise, touching lives and lubricating industries
-                                across continents.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-xl-6 p-0">
-                    <div class="about-image-container h-100 ">
-                        <img class="img-fluid" src="https://ik.imagekit.io/ecomax/assets/images/about_page/car.png"
-                            alt="about image">
-                    </div>
-                </div>
+    <div class="about-section">
+        <div class="page_width p-0 ">
+          <div class="heading_container text-center mb-0 mb-md-5  ">
+            <h2 class="main-heading">
+              Welcome to Ecomax – Where Every Drop Counts!
+            </h2>
+    
+          </div>
+          <div class="row">
+            <div class="col-12 col-xl-6  ps-xl-2 px-3">
+              <div class="about-description text-start ">
+                <p class="mt-0 mb-0  about-seciton-description text-center text-md-start ">
+                  At Ecomax, we're not just about lubricant oils; we're about empowering industries, driving sustainability
+                  and building lasting relationships. With over 10 years of experience under our belt, we've honed our
+                  craft, perfected our products and cultivated a company culture centered around innovation and integrity.
+                </p>
+                <p class=" mb-0 about-seciton-description text-center text-md-start ">
+                  Our journey began with a simple belief: that quality should never be compromised, and sustainability
+                  should always be a priority. What started as a passion project has blossomed into a global enterprise,
+                  touching lives and lubricating industries across continents.
+                </p>
+                <p class="mb-0 about-seciton-description text-center text-md-start ">
+                  What sets us apart is our relentless pursuit of excellence in every aspect of our business. From research
+                  and development to production and distribution, we adhere to the highest standards of quality, safety, and
+                  environmental stewardship. Our state-of-the-art facilities and advanced technologies ensure that every
+                  drop of Ecomax lubricant delivers optimal performance and protection, mile after mile.
+                </p>
+              </div>
             </div>
+            <div class="col-12 col-xl-6 pe-0   ">
+              <div class="about-image-container h-100 ">
+                <img class="img-fluid" src="assets/images/about_page/car.png" alt="about image">
+              </div>
+            </div>
+            <div class="about-hero-subtext  text-center ">
+              <p>But our dedication doesn't stop there. We are also deeply invested in fostering strong relationships with
+                our customers and partners. By providing personalized service, expert advice, and ongoing support, we strive
+                to be more than just a supplier – we aim to be a trusted ally in your success. </p>
+              <p class="mb-0 ">As we look to the future, we remain committed to driving innovation, sustainability, and
+                customer satisfaction. Whether you're powering a fleet of vehicles, operating heavy machinery, or seeking
+                lubricant solutions for your industrial processes, you can rely on Ecomax to keep your engines running
+                smoothly, efficiently, and responsibly.</p>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
     <!-- about section image with text section End -->
     <!-- Start: benefit from -->
     <section class="benefit section-padding">
